@@ -262,6 +262,15 @@ public class SWORDAuthenticator
 				{
 					authenticated = true;
 					sc.setAuthenticated(ep);
+					 // Set any special groups - invoke the authentication mgr.
+		            int[] groupIDs = AuthenticationManager.getSpecialGroups(context, null);
+
+		            for (int i = 0; i < groupIDs.length; i++)
+		            {
+		                context.setSpecialGroup(groupIDs[i]);
+		                log.debug("Adding Special Group id="+String.valueOf(groupIDs[i]));
+		            }
+					
 					sc.setAuthenticatorContext(context);
 					sc.setContext(context);
 				}
@@ -283,6 +292,14 @@ public class SWORDAuthenticator
 						sc.setOnBehalfOf(epObo);
 						Context oboContext = this.constructContext(ip);
 						oboContext.setCurrentUser(epObo);
+		                // Set any special groups - invoke the authentication mgr.
+	                    int[] groupIDs = AuthenticationManager.getSpecialGroups(oboContext, null);
+
+	                    for (int i = 0; i < groupIDs.length; i++)
+	                    {
+	                        oboContext.setSpecialGroup(groupIDs[i]);
+	                        log.debug("Adding Special Group id="+String.valueOf(groupIDs[i]));
+	                    }
 						sc.setContext(oboContext);
 					}
 					else
